Adjust alert color for #46 Potential to cause contrast issues. In `alerts.less` for instance, I had to change the font color to black instead of white. Other examples probably exist, but haven't seen this alert being used anywhere else. Indeed a search for @warning comes up short.

--- a/styles/components/alerts.less
+++ b/styles/components/alerts.less
@@ -22,13 +22,13 @@
 
 .alert-danger {
 	background-color: @warning;
-	color: #fff;
+	color: black;
 
 	a,
 	a:hover,
 	a:focus,
 	a:active {
-		color: #fff;
+		color: black;
 		text-decoration: underline;
 	}
 }
