--- a/styles/variables.less
+++ b/styles/variables.less
@@ -19,8 +19,8 @@
 @primary-light:     #BEE;
 @primary:           #10BECA;
 @primary-text:      #0A818A;
-@warning:           #ca1031;
-@contrast: 					#000;
+@warning:           #ffd000;
+@contrast: 			#000;
 
 // Typefaces
 @font-sans:         'Fira Sans', sans-serif;
